After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672505 - winscreencap: Fix compiling with mingw
winscreencap: Fix compiling with mingw
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Windows
: Normal normal
: 0.10.24
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-03-20 22:22 UTC by Raimo Järvi
Modified: 2012-03-20 22:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix compiling (6.24 KB, patch)
2012-03-20 22:25 UTC, Raimo Järvi
committed Details | Review

Description Raimo Järvi 2012-03-20 22:22:44 UTC
Compiling with mingw-w64 produces a bunch of warnings and errors:

gstdx9screencapsrc.c: In function 'gst_dx9screencapsrc_set_caps':
gstdx9screencapsrc.c:299:3: error: suggest parentheses around assignment used as truth value
gstdx9screencapsrc.c:304:3: error: format '%d' expects type 'int', but argument 8 has type 'LONG'
gstdx9screencapsrc.c:304:3: error: format '%d' expects type 'int', but argument 9 has type 'LONG'
gstdx9screencapsrc.c: In function 'gst_dx9screencapsrc_create_caps_from_format':
gstdx9screencapsrc.c:393:13: error: 'GST_VIDEO_RED_MASK_15_INT' undeclared (first use in this function)
gstdx9screencapsrc.c:393:13: note: each undeclared identifier is reported only once for each function it appears in
gstdx9screencapsrc.c:394:15: error: 'GST_VIDEO_GREEN_MASK_15_INT' undeclared (first use in this function)
gstdx9screencapsrc.c:395:14: error: 'GST_VIDEO_BLUE_MASK_15_INT' undeclared (first use in this function)
gstdx9screencapsrc.c:410:13: error: 'GST_VIDEO_RED_MASK_16_INT' undeclared (first use in this function)
gstdx9screencapsrc.c:411:15: error: 'GST_VIDEO_GREEN_MASK_16_INT' undeclared (first use in this function)
gstdx9screencapsrc.c:412:14: error: 'GST_VIDEO_BLUE_MASK_16_INT' undeclared (first use in this function)
gstdx9screencapsrc.c: In function 'gst_dx9screencapsrc_get_times':
gstdx9screencapsrc.c:481:23: error: unused variable 'src'
gstdx9screencapsrc.c: In function 'gst_dx9screencapsrc_create':
gstdx9screencapsrc.c:538:3: error: format '%lu' expects type 'long unsigned int', but argument 8 has type 'gint'
gstdx9screencapsrc.c:504:16: error: 'time' may be used uninitialized in this function

gstgdiscreencapsrc.c: In function 'gst_gdiscreencapsrc_set_caps':
gstgdiscreencapsrc.c:318:3: error: suggest parentheses around assignment used as truth value
gstgdiscreencapsrc.c:351:3: error: format '%d' expects type 'int', but argument 8 has type 'LONG'
gstgdiscreencapsrc.c:351:3: error: format '%d' expects type 'int', but argument 9 has type 'LONG'
gstgdiscreencapsrc.c: In function 'gst_gdiscreencapsrc_get_caps':
gstgdiscreencapsrc.c:380:3: error: format '%d' expects type 'int', but argument 8 has type 'LONG'
gstgdiscreencapsrc.c:380:3: error: format '%d' expects type 'int', but argument 9 has type 'LONG'
gstgdiscreencapsrc.c: In function 'gst_gdiscreencapsrc_get_times':
gstgdiscreencapsrc.c:419:23: error: unused variable 'src'
gstgdiscreencapsrc.c: In function 'gst_gdiscreencapsrc_create':
gstgdiscreencapsrc.c:457:3: error: format '%lu' expects type 'long unsigned int', but argument 8 has type 'gint'
gstgdiscreencapsrc.c:457:3: error: format '%d' expects type 'int', but argument 9 has type 'LONG'
gstgdiscreencapsrc.c:457:3: error: format '%d' expects type 'int', but argument 10 has type 'LONG'
gstgdiscreencapsrc.c:442:16: error: 'time' may be used uninitialized in this function
Comment 1 Raimo Järvi 2012-03-20 22:25:44 UTC
Created attachment 210207 [details] [review]
Fix compiling
Comment 2 Tim-Philipp Müller 2012-03-20 22:46:56 UTC
Thanks, pushed:


commit 477aaba6176b7f910defc1245760a5d816cfafe4
Author: Raimo Järvi <raimo.jarvi@gmail.com>
Date:   Wed Mar 21 00:17:47 2012 +0200

    winscreencap: Fix compiling with mingw
    
    https://bugzilla.gnome.org/show_bug.cgi?id=672505